add footer to logo n and text with icons

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -5,6 +5,8 @@
 </style>
 
 <div class="footer {% if section.settings.separate_section_with_border %}bordered-section{% endif %}">
+  <div style="text-align: center;  margin-bottom:50px;" class="Footer__Title Heading u-h6"><img class="Header__LogoImage" style="position:center;margin: 0 auto;" src="https://cdn.shopify.com/s/files/1/0386/2744/2819/files/SAAR_LOGO_TEXTURED_2fb8a095-95e4-4584-aa97-cd5b1513b64a_140x.png?v=1630549787" alt="footer logo"></div>
+  
   <div class="container">
     <div class="footer__inner">
       {%- comment -%}
