Klaviyo form newsletter implimentation

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -86,8 +86,34 @@
                         {{- block.settings.content -}}
                       </div>
                     {%- endif -%}
+                    <form-klaviyo-newsletter>
+                      <form id="footer-newslterr" class="form form-klaviyo-newsletter">
+                      <div class="form_on_success">
+                          {%- assign success_message = 'general.newsletter.subscribed_successfully' | t -%}
+                          {%- render 'banner', content: success_message, status: 'success' -%}
+                      </div>
+              
+                      <div class="form_submit_container fieldset-with-submit">
+                          <div class="form_on_danger">
+                              {%- render 'banner', content: "an error has occurred, please retry later.", status: 'error' -%}
+                          </div>
+              
+                          {%- capture label -%}{{ 'general.newsletter.email' | t }}{%- endcapture -%}
+                          {%- render 'input', name: 'contact[email]', label: label, type: 'email', required: true, autocomplete: 'email', enterkeyhint: 'send', self_submit: true -%}
+                          
+                      </div>
+                        <div class="align-self-start fieldset-submit-wrapper">
+                          {%- assign button_label = 'general.newsletter.subscribe' | t -%}
+                          {%- render 'button', type: 'submit', content: button_label, background: block.settings.button_background, text_color: block.settings.button_text_color -%}
+                        </div>
+              
+                      {%- if section.settings.subtext != blank -%}
+                          <p class="text-xs text-subdued">{{ section.settings.subtext | escape }}</p>
+                      {%- endif -%}
+                  </form>
+                </form-klaviyo-newsletter>
 
-                    {%- assign newsletter_form_id = 'newsletter-form-' | append: section.id -%}
+                    {% comment %} {%- assign newsletter_form_id = 'newsletter-form-' | append: section.id -%}
 
                     {%- form 'customer', id: newsletter_form_id, class: 'form' -%}
                       {%- if form.posted_successfully? -%}
@@ -109,7 +135,7 @@
                           {%- render 'button', type: 'submit', content: button_label, background: block.settings.button_background, text_color: block.settings.button_text_color -%}
                         </div>
                       {%- endif -%}
-                    {%- endform -%}
+                    {%- endform -%} {% endcomment %}
                   </div>
 
               {%- endcase -%}
