--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,3 +6,4 @@ $active-color:#0500FF;
 @import 'components/image-with-text.scss';
 @import 'components/icon-with-text.scss';
 @import 'components/caomparatif-table.scss';
+@import 'components/klaviyo-form.scss';
