--- a/assets/custom-sections.js.liquid
+++ b/assets/custom-sections.js.liquid
@@ -580,3 +580,62 @@ class BuyButtonsCustom extends BuyButtons {
 
 // Create the custom elements
 window.customElements.define("buy-buttons-custom", BuyButtonsCustom);
+
+
+class KlaviyoFormComponent extends HTMLElement {
+  constructor() {
+    super();
+  }
+
+  connectedCallback() {
+    this.form = this.querySelector('.form-klaviyo-newsletter');
+    this.form.addEventListener('submit', this.onSubmit.bind(this));
+  }
+
+  onSubmit(event) {
+    event.preventDefault();
+    // Add any additional logic or validation here
+    const emailInput = this.form.querySelector('input[name="contact[email]"]').value;
+
+    const url = 'https://a.klaviyo.com/client/subscriptions/?company_id=XVpzfE';
+
+    const data = {
+      data: {
+        type: "subscription",
+        attributes: {
+          list_id: "VC2Fiv",
+          email: emailInput,
+        }
+      }
+    };
+
+    fetch(url, {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json',
+        'Revision': '2023-06-15'
+      },
+      body: JSON.stringify(data)
+    })
+      .then(data => {
+        if(data.ok){
+          this.querySelector('form-klaviyo-newsletter .form_on_success').style.display = "block";
+          this.querySelector('form-klaviyo-newsletter .fieldset-with-submit').style.display = "none";
+          this.querySelector('form-klaviyo-newsletter .fieldset-submit-wrapper').style.display = "none";
+        }
+        else{
+          this.querySelector('form-klaviyo-newsletter .form_on_danger').style.display = "block";
+          const submitButton = this.form.querySelector('button[type="submit"]');
+          submitButton.setAttribute('aria-busy', 'false');
+
+        }
+      })
+      .catch(errors => {
+        this.querySelector('form-klaviyo-newsletter .form_on_danger').style.display = "block";
+        const submitButton = this.form.querySelector('button[type="submit"]');
+        submitButton.setAttribute('aria-busy', 'false');
+      });
+  }
+}
+
+customElements.define('form-klaviyo-newsletter', KlaviyoFormComponent);
