--- a/assets/main.css
+++ b/assets/main.css
@@ -1355,3 +1355,18 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
     padding: 0.8rem 1.3rem 0.8rem 1.5rem;
   }
 }
+
+form-klaviyo-newsletter .form-klaviyo-newsletter .form_on_success {
+  display: none;
+}
+form-klaviyo-newsletter .form-klaviyo-newsletter .form_submit_container .form_on_danger {
+  display: none;
+  margin-bottom: var(--spacing-6);
+}
+
+.footer__block--newsletter form-klaviyo-newsletter .form-klaviyo-newsletter .form_submit_container {
+  grid-template-columns: initial;
+}
+.footer__block--newsletter form-klaviyo-newsletter .form-klaviyo-newsletter .form_submit_container .form_on_danger {
+  margin-bottom: initial;
+}
