--- a/src/scss/views/pdp.scss
+++ b/src/scss/views/pdp.scss
@@ -375,6 +375,7 @@
         display: flex;
         flex-direction: column;
         row-gap: 10px;
+        align-self: flex-end;
         .pplr-wrapper{
           display: flex;
           flex-wrap: wrap;
@@ -872,6 +873,7 @@
   product-personalizer-wrapper.ready-custom{
     .product-personalizer{
       display: flex !important;
+      min-height: 100%;
     }
   }
   
