--- a/layout/theme.shogun.landing.liquid
+++ b/layout/theme.shogun.landing.liquid
@@ -8,7 +8,7 @@ This file can be re-written at any time.
 <html class="no-js" lang="{{ request.locale.iso_code }}" dir="{% render 'direction' %}">
   
 <head>
-  
+  {% render 'pagefly-head' %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height, minimum-scale=1.0, maximum-scale=5.0">
 
@@ -72,8 +72,8 @@ This file can be re-written at any time.
   
 	{{ shop.metafields.loox["global_html_head"] }}
 
-
   {% render 'shogun-head' %}
+
 </head>
 
 
