--- a/assets/main.css
+++ b/assets/main.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+@media screen and (max-width: 999px) {
+  .template--product-Yonder-dev .sticky-product-gallery product-gallery, .template--product-yonder-dev .sticky-product-gallery product-gallery {
+    z-index: -2;
+  }
+}
 @media screen and (min-width: 1000px) {
   .template--product-Yonder-dev .sticky-product-gallery product-gallery, .template--product-yonder-dev .sticky-product-gallery product-gallery {
     --product-gallery-thumbnail-size: 6.25rem;
@@ -15,11 +20,6 @@
 }
 .template--product-Yonder-dev product-gallery .product-gallery__thumbnail[aria-current=true], .template--product-yonder-dev product-gallery .product-gallery__thumbnail[aria-current=true] {
   padding: 0px;
-}
-@media screen and (max-width: 999px) {
-  .template--product-Yonder-dev product-gallery, .template--product-yonder-dev product-gallery {
-    z-index: -2;
-  }
 }
 .template--product-Yonder-dev product-gallery .product-gallery__thumbnail[aria-current=true][aria-current=true], .template--product-yonder-dev product-gallery .product-gallery__thumbnail[aria-current=true][aria-current=true] {
   border-color: #0500FF;
@@ -330,7 +330,8 @@
   }
 }
 .template--product-Yonder-dev .product-info .product-personalizer .pplr-wrapper[data-main="1"]:not(.pplr-checkbox) .pplrlabel, .template--product-yonder-dev .product-info .product-personalizer .pplr-wrapper[data-main="1"]:not(.pplr-checkbox) .pplrlabel {
-  padding-block-end: 10px !important;
+  -webkit-padding-after: 10px !important;
+          padding-block-end: 10px !important;
 }
 .template--product-Yonder-dev .product-info .product-personalizer .pplr-wrapper[data-main="1"] .pplrlabel, .template--product-yonder-dev .product-info .product-personalizer .pplr-wrapper[data-main="1"] .pplrlabel {
   color: #1C1C1C;
@@ -720,80 +721,105 @@
 }
 
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=title-with-rating], .template--product-yonder-dev .product-info__block-list .product-info__block-item[data-block-type=title-with-rating] {
-  margin-block-end: 0.813rem;
+  -webkit-margin-after: 0.813rem;
+          margin-block-end: 0.813rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=title-with-rating], .template--product-yonder-dev .product-info__block-list .product-info__block-item[data-block-type=title-with-rating] {
-    margin-block-end: 1.188rem;
+    -webkit-margin-after: 1.188rem;
+            margin-block-end: 1.188rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info-type-text:nth-child(-n+2), .template--product-yonder-dev .product-info__block-list .product-info-type-text:nth-child(-n+2) {
-  margin-block-start: 0rem;
-  margin-block-end: 1.063rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 1.063rem;
+          margin-block-end: 1.063rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info-type-text:nth-child(-n+2), .template--product-yonder-dev .product-info__block-list .product-info-type-text:nth-child(-n+2) {
-    margin-block-end: 1.063rem;
+    -webkit-margin-after: 1.063rem;
+            margin-block-end: 1.063rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=price], .template--product-yonder-dev .product-info__block-list .product-info__block-item[data-block-type=price] {
-  margin-block-start: 0rem;
-  margin-block-end: 1.25rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 1.25rem;
+          margin-block-end: 1.25rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=price], .template--product-yonder-dev .product-info__block-list .product-info__block-item[data-block-type=price] {
-    margin-block-end: 1.375rem;
+    -webkit-margin-after: 1.375rem;
+            margin-block-end: 1.375rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info-type-text:nth-child(even), .template--product-yonder-dev .product-info__block-list .product-info-type-text:nth-child(even) {
-  margin-block-start: 0rem;
-  margin-block-end: 1.75rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 1.75rem;
+          margin-block-end: 1.75rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info-type-text:nth-child(even), .template--product-yonder-dev .product-info__block-list .product-info-type-text:nth-child(even) {
-    margin-block-end: 1.375rem;
+    -webkit-margin-after: 1.375rem;
+            margin-block-end: 1.375rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=product-variations], .template--product-yonder-dev .product-info__block-list .product-info__block-item[data-block-type=product-variations] {
-  margin-block-start: 0rem;
-  margin-block-end: 1.625rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 1.625rem;
+          margin-block-end: 1.625rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=product-variations], .template--product-yonder-dev .product-info__block-list .product-info__block-item[data-block-type=product-variations] {
-    margin-block-end: 1.188rem;
+    -webkit-margin-after: 1.188rem;
+            margin-block-end: 1.188rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity], .template--product-yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] {
-  margin-block-start: 0rem;
-  margin-block-end: 2.25rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 2.25rem;
+          margin-block-end: 2.25rem;
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] .scroll-customize-wrapper-mrb, .template--product-yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] .scroll-customize-wrapper-mrb {
-  margin-block-end: 1.438rem;
+  -webkit-margin-after: 1.438rem;
+          margin-block-end: 1.438rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity], .template--product-yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] {
-    margin-block-end: 2.188rem;
+    -webkit-margin-after: 2.188rem;
+            margin-block-end: 2.188rem;
   }
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] .scroll-customize-wrapper-mrb, .template--product-yonder-dev .product-info__block-list .product-info__block-item[data-block-type=buy-buttons-with-quantity] .scroll-customize-wrapper-mrb {
-    margin-block-end: 1.563rem;
+    -webkit-margin-after: 1.563rem;
+            margin-block-end: 1.563rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .block-product-feature_with_icon_v2, .template--product-yonder-dev .product-info__block-list .block-product-feature_with_icon_v2 {
-  margin-block-start: 0rem;
-  margin-block-end: 2.313rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 2.313rem;
+          margin-block-end: 2.313rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .block-product-feature_with_icon_v2, .template--product-yonder-dev .product-info__block-list .block-product-feature_with_icon_v2 {
-    margin-block-end: 2.063rem;
+    -webkit-margin-after: 2.063rem;
+            margin-block-end: 2.063rem;
   }
 }
 .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=accordion-group], .template--product-yonder-dev .product-info__block-list .product-info__block-item[data-block-type=accordion-group] {
-  margin-block-start: 0rem;
-  margin-block-end: 2.05rem;
+  -webkit-margin-before: 0rem;
+          margin-block-start: 0rem;
+  -webkit-margin-after: 2.05rem;
+          margin-block-end: 2.05rem;
 }
 @media screen and (max-width: 999px) {
   .template--product-Yonder-dev .product-info__block-list .product-info__block-item[data-block-type=accordion-group], .template--product-yonder-dev .product-info__block-list .product-info__block-item[data-block-type=accordion-group] {
-    margin-block-end: 2.05rem;
+    -webkit-margin-after: 2.05rem;
+            margin-block-end: 2.05rem;
   }
 }
 @media screen and (min-width: 1000px) {
@@ -914,7 +940,8 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   }
 }
 .multi-column-with-text-v2 .main-stack-container .section-header .prose p {
-  margin-block-start: 1rem;
+  -webkit-margin-before: 1rem;
+          margin-block-start: 1rem;
   color: #343434;
   text-align: center;
   font-family: Nunito Sans;
@@ -968,7 +995,8 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   }
 }
 .multi-column-with-text-v2 .main-stack-container .multi-column__item .text-part .content-part {
-  margin-block-start: 0.688rem;
+  -webkit-margin-before: 0.688rem;
+          margin-block-start: 0.688rem;
 }
 .multi-column-with-text-v2 .main-stack-container .multi-column__item .text-part .content-part p {
   color: #343434;
@@ -1024,7 +1052,8 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin-block-start: 1.5rem;
+  -webkit-margin-before: 1.5rem;
+          margin-block-start: 1.5rem;
 }
 @media screen and (max-width: 769px) {
   .shopify-section--text-with-icons-v2 .section-header .prose p {
@@ -1061,14 +1090,18 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   border-radius: 22px;
   border: 1px solid #343434;
   background: #EFEFEF;
-  padding-block-start: 2.563rem;
-  padding-block-end: 2rem;
+  -webkit-padding-before: 2.563rem;
+          padding-block-start: 2.563rem;
+  -webkit-padding-after: 2rem;
+          padding-block-end: 2rem;
 }
 @media screen and (max-width: 769px) {
   .shopify-section--text-with-icons-v2 .text-with-icons .text-with-icons__item {
     min-width: initial;
-    padding-block-start: 2.563rem;
-    padding-block-end: 2rem;
+    -webkit-padding-before: 2.563rem;
+            padding-block-start: 2.563rem;
+    -webkit-padding-after: 2rem;
+            padding-block-end: 2rem;
   }
 }
 .shopify-section--text-with-icons-v2 .text-with-icons .text-with-icons__item .constrained-image {
@@ -1133,12 +1166,14 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin-block-start: 1.5rem;
+  -webkit-margin-before: 1.5rem;
+          margin-block-start: 1.5rem;
 }
 @media screen and (max-width: 769px) {
   .comparatif-table-section .section-header .prose p {
     font-size: 16px;
-    margin-block-start: 1rem;
+    -webkit-margin-before: 1rem;
+            margin-block-start: 1rem;
   }
 }
 .comparatif-table-section .section-header .prose h2 {
@@ -1330,9 +1365,6 @@ scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   .comparatif-table-section .comparison-table td {
     width: 6rem;
   }
-.template-product  product-gallery.product-gallery {
-    z-index: 0 !important;
-}
 }
 .comparatif-table-section .comparison-table td:not(:first-child) {
   text-align: center;
