bare search fix on safari

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -104,11 +104,10 @@
     {%- endif -%}
   
 	{{ shop.metafields.loox["global_html_body"] }}
-
-  {% if template == 'product' %}
+  {% if template.name == 'product' %}
     <style>
       @media screen and (max-width: 999px) {
-        html.lock .template--product-Yonder-dev .sticky-product-gallery product-gallery, .template--product-yonder-dev .sticky-product-gallery product-gallery {
+        html.lock .template--product-Yonder-dev .sticky-product-gallery product-gallery,html.lock .template--product-yonder-dev .sticky-product-gallery product-gallery {
           z-index: -2;
         }
       }
