fixed apollo price

--- a/src/scss/views/pdp.scss
+++ b/src/scss/views/pdp.scss
@@ -458,6 +458,8 @@
             width: fit-content;
             top: 3px;
             width: 25%;
+            overflow: visible;
+            white-space: nowrap;
             .lt{
               display: none;
             }
