--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -126,7 +126,6 @@ Supported variables
                 {{- product.title -}}
               </a>
             {%- endif -%}
-
             {%- if show_prices -%}
               {%- render 'price-list', product: product, context: 'card' -%}
             {%- endif -%}
@@ -134,6 +133,7 @@ Supported variables
         {%- endif -%}
       </div>
     {%- endif -%}
+    <div class="loox-rating" data-id="{{ product.id }}" data-rating="{{ product.metafields.loox.avg_rating }}" data-raters="{{ product.metafields.loox.num_reviews }}"></div>
 
     {%- if show_swatches and settings.product_color_display != 'hide' -%}
       {%- assign color_label_list = 'general.label.color' | t | replace: ', ', ',' | downcase | split: ',' -%}
