--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <html class="no-js" lang="{{ request.locale.iso_code }}" dir="{% render 'direction' %}">
-  <head>{% render 'pagefly-head' %}
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height, minimum-scale=1.0, maximum-scale=5.0">
 
@@ -66,7 +66,13 @@
 	{{ shop.metafields.loox["global_html_head"] }}
 
   {% render 'shogun-head' %}
-</head>
+
+    <script src="https://t.cometlytrack.com/e?uid=eb2e9d-6039-61b5f2-s"></script>
+<script>
+comet('init');
+</script>
+    
+{% include 'pagefly-app-header' %}</head>
 
   {% liquid
     assign features_class = ''
