--- a/layout/theme.pagefly.liquid
+++ b/layout/theme.pagefly.liquid
@@ -5,7 +5,7 @@ If you plan to remove PageFly, please see the guide in our help center first: ht
 <!doctype html>
 
 <html class="no-js" lang="{{ request.locale.iso_code }}" dir="{% render 'direction' %}">
-  <head>{% render 'pagefly-head' %}
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height, minimum-scale=1.0, maximum-scale=5.0">
 
@@ -70,7 +70,13 @@ If you plan to remove PageFly, please see the guide in our help center first: ht
 	{{ shop.metafields.loox["global_html_head"] }}
 
   {% render 'shogun-head' %}
-</head>
+
+    <script src="https://t.cometlytrack.com/e?uid=eb2e9d-6039-61b5f2-s"></script>
+<script>
+comet('init');
+</script>
+    
+{% include 'pagefly-app-header' %}</head>
 
   {% liquid
     assign features_class = ''
@@ -88,5 +94,7 @@ If you plan to remove PageFly, please see the guide in our help center first: ht
     endif
   %}
 
-  <body class="{{ features_class }} template-{{template.name}} template--{{template | replace: '.' :'-'}}"><div class="pagefly-container">{{ content_for_layout }}</div></body>
+  <body class="{{ features_class }} template-{{template.name}} template--{{template | replace: '.' :'-'}}"><div class="pagefly-container">
+              {{ content_for_layout }}
+            </div></body>
 </html>
